[project]
name = "rl-pipeline"
version = "0.1.0"
description = "Experiment tools for streamlined RL experiment management"
readme = "README.md"
authors = [{ name = "Mikihisa Yuasa", email = "myuasa2@illinois.edu" }]
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
